Bug 434516 - Discogs Import doesn't retrieve complete track data for multi-movement works
Summary: Discogs Import doesn't retrieve complete track data for multi-movement works
Status: RESOLVED FIXED
Alias: None
Product: kid3
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.8.x
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Urs Fleisch
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-16 22:25 UTC by einheldenleben
Modified: 2021-03-18 03:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description einheldenleben 2021-03-16 22:25:06 UTC
SUMMARY


STEPS TO REPRODUCE
1. Import from Discogs
2. Find data from an album with multi-track works i.e. https://www.discogs.com/Chicago-Symphony-Orchestra-Brass-Live/release/11622936
3. Import.

OBSERVED RESULT

Kid3 only brings in the track name for the first movement, but not the subsequent movements in a multi-movement work, even though the data is there in the discogs database. Have tried this with multiple albums with the same result.

EXPECTED RESULT

Should download track names for all the movements in a multi-movement work.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 5.14.2

ADDITIONAL INFORMATION
Comment 1 Urs Fleisch 2021-03-17 20:47:34 UTC
Git commit 27d33a887c7eeb6b4273340fa5b49dc292782a7e by Urs Fleisch.
Committed on 17/03/2021 at 14:59.
Pushed by ufleisch into branch 'master'.

Support sub tracks in Discogs import

M  +149  -79   src/plugins/discogsimport/discogsimporter.cpp

https://invent.kde.org/multimedia/kid3/commit/27d33a887c7eeb6b4273340fa5b49dc292782a7e
Comment 2 einheldenleben 2021-03-18 03:40:26 UTC
(In reply to Urs Fleisch from comment #1)
> Git commit 27d33a887c7eeb6b4273340fa5b49dc292782a7e by Urs Fleisch.
> Committed on 17/03/2021 at 14:59.
> Pushed by ufleisch into branch 'master'.
> 
> Support sub tracks in Discogs import
> 
> M  +149  -79   src/plugins/discogsimport/discogsimporter.cpp
> 
> https://invent.kde.org/multimedia/kid3/commit/
> 27d33a887c7eeb6b4273340fa5b49dc292782a7e

Compiled and it appears to be working well now. Thank you.