Support sub tracks in Discogs import

BUG: 434516